<resources>
    <string name="app_name">Moonbucks</string>
    <string name="system">Moonbucks Café</string>
    <string name="aboutus">Sobre Nós</string>
    <string name="type">Tipo de Café</string>
    <string name="typeOfCoffee">Tipo de Café</string>
    <string name="aboutusText">Isso acontece milhões de vezes por semana - um consumidor recebe uma bebida de um barista da Moonbucks - mas cada interação é única.  É apenas um instante - apenas uma mão estendida sobre o balcão para entregar uma xícara a outra mão estendida. Mas é uma conexão.
A Moonbucks garante que tudo o que faz é para honrar essa conexão - desde seu compromisso com o café da mais alta qualidade no mundo, até a maneira como eles se relacionam com seus consumidores e comunidades para fazer negócios de forma responsável.
</string>
    <string name="ourproducts">Nossos Produtos</string>
    <string name="discountcoupom">Cupom de Desconto</string>
    <string name="tablereservation">Reserva de Mesa</string>
    <string name="viplist">Lista VIP</string>
    <string name="photogallery">Galeria de Fotos</string>
    <string name="emailInsert">Insira seu email</string>
    <string name="nameInsert">Insira seu nome</string>
    <string name="redeemCoupom">Resgatar Cupom</string>
    <string name="tableReservation">Reservar Mesa</string>
    <string name="reservation">Reservar</string>
    <string-array name="menu">
        <item>@string/aboutus</item>
        <item>@string/ourproducts</item>
        <item>@string/discountcoupom</item>
        <item>@string/tablereservation</item>
        <item>@string/viplist</item>
        <item>@string/photogallery</item>
    </string-array>
    <string-array name="tables">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>